--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <li> Milk </li>
     </ol>  
     <p > Isnt that cool <p>
-    <table id="peopletable" style="color:red;" > 
+    <table id="peopletable" style="color:red;"> 
     <tr> 
       <th> Name </th> 
       <th> FavoriteFood </th>
@@ -41,6 +41,7 @@
       <th> French Fries </th>
       <th> Orange Crush </th>
     </tr>
+    </table>
     <script src="script.js"></script>
   </body>
 </html>
