--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <li> Water </li> 
      <li> Milk </li>
     </ol>  
-    <p > Isnt that cool <p>
+    <p> Isnt that cool </p>
     <table id="peopletable" style="color:red;"> 
     <tr> 
       <th> Name </th> 
